[tool.poetry]
name = "summarizer-ml"
version = "0.1.0"
description = ""
authors = ["minsu <minsu2530@u.sogang.ac.kr>"]

[tool.poetry.dependencies]
python = "^3.8"
face-recognition = "^1.3.0"
opencv-python = "^4.5.5"
numpy = "^1.22.3"
sklearn = "^0.0"
ipykernel = "^6.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
